--- a/src/main/webapp/script/usuario/View.xhtml
+++ b/src/main/webapp/script/usuario/View.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/script/template_inbox.xhtml">
+    <ui:composition template="/script/template_inbox_bootstrap.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.ViewUsuarioTitle}"></h:outputText>
         </ui:define>
